--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ numpy==1.22.4
 sentencepiece>=0.1.96
 seqio==0.0.7
 protobuf==3.20.3
-tensorflow
-tensorflow-datasets
+tensorflow>=2.9.1
+tensorflow-datasets>=4.5.2
 
